--- a/data/project.json
+++ b/data/project.json
@@ -4,7 +4,13 @@
     "publish_sha": "",
     "publish_iso_date": ""
   },
-  "users": [],
+  "users": [
+    {
+      "login_name": "JMU-AudiAnnotate",
+      "avatar_url": "https://avatars.githubusercontent.com/u/92408618?v=4",
+      "admin": true
+    }
+  ],
   "project": {
     "github_org": "JMU-AudiAnnotate",
     "is_private": false,
@@ -60,6 +66,7 @@
       ]
     },
     "created_at": "2025-03-06T20:23:42.335Z",
-    "updated_at": "2025-03-06T20:27:35.385Z"
+    "updated_at": "2025-03-06T20:27:35.385Z",
+    "generate_pages_site": true
   }
 }
